--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,5 +2,8 @@
 
     <string name="app_name">AndroidBase</string>
     <string name="startIntentService">开始IntentService服务</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_listview">ListView</string>
+    <string name="action_gridview">GridView</string>
 
 </resources>
